# rampart

./: .gitignore  dune-project  rampart.opam  refcount.txt
.github/: copilot-instructions.md
docs/: design.md
lib/: ast.ml  bind.ml  const.ml  const_eval.ml  diagnostic.ml  dune  error.ml  evaluate.ml  evaluate.ml.legacy  external.ml  lexPass.ml  lexer.mll  location.ml  mapAst.ml  parser.mly  parserLowering.ml  recovery.ml  slot.ml  test_bind.ml  test_const_eval.ml  test_evaluate.ml  test_evaluate.ml.legacy  test_parser.ml  token.ml  type.ml  value.ml
test/: dune
